[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencost"
version = "0.0.2"
authors = [
  { name="Trisha Pan", email="trishaepan@gmail.com" },
  { name="Alex Reibman", email="areibman@gmail.com" },
]
description = "To calculate token and translated USD cost of string and message calls to OpenAI, for example when used by AI agents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tiktoken"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "coverage",
]

[project.urls]
Homepage = "https://github.com/AgentOps-AI/tokencost"
Issues = "https://github.com/AgentOps-AI/tokencost/issues"
