[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tokencost = ["model_prices.json"]

[project]
name = "tokencost"
version = "0.1.11"
authors = [
  { name = "Trisha Pan", email = "trishaepan@gmail.com" },
  { name = "Alex Reibman", email = "areibman@gmail.com" },
]
description = "To calculate token and translated USD cost of string and message calls to OpenAI, for example when used by AI agents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tiktoken>=0.7.0",
    "aiohttp>=3.9.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "flake8>=3.1.0",
    "coverage[toml]>=7.4.0",
]
llama-index = [
    "llama-index>=0.10.23"
]

[project.urls]
Homepage = "https://github.com/AgentOps-AI/tokencost"
Issues = "https://github.com/AgentOps-AI/tokencost/issues"
